--- a/scss/base/preheader.scss
+++ b/scss/base/preheader.scss
@@ -1,88 +1,101 @@
 .dt-page__preheader {
-  padding-top: 80px;
-  padding-bottom: 80px;
+  background: url("/dist/img/excursions/1.png");
 
-  & .curved {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
+  .dt-preheader__content {
+    padding-top: 80px;
+    padding-bottom: 80px;
 
-  & .dt-preheader {
-    &__breadcrumbs {
-      & .breadcrumb-item {
-        text-transform: uppercase;
-        color: $color-white;
-        font-size: 10px;
-        font-family: $font-family-regular;
-        text-decoration: none !important;
-      }
-
-      & .breadcrumb-item:not(:last-child) {
-        cursor: pointer;
-      }
-
-      margin-bottom: 80px;
+    & .curved {
+      padding-top: 30px;
+      padding-bottom: 30px;
     }
 
-    &__title {
-      font-size: 46px;
-      font-family: $font-family-bold;
-      color: $color-white;
-      text-align: center;
-      margin-bottom: 25px;
-    }
-
-    &__tags {
-      & .dt-tags__list {
-        & li {
-          display: inline;
-          color: white;
-          font-size: 8px;
-          letter-spacing: 2px;
+    & .dt-preheader {
+      &__breadcrumbs {
+        & .breadcrumb-item {
           text-transform: uppercase;
-          padding: 11px 6px;
-          border: 1px solid #6d767b;
-          border-radius: 6px;
-        }
-      }
-    }
-
-    &__description {
-      font-size: 14px;
-      font-family: $font-family-regular;
-      color: $color-white;
-      margin-bottom: 75px;
-    }
-
-    &__photos {
-      display: flex;
-      margin-bottom: 35px;
-
-      & .dt-photos__item--placeholder {
-        background: rgba(0, 113, 235, 0.85) !important;
-      }
-
-      & .dt-photos__item {
-        &:not(:last-child) {
-          margin-right: 6px;
+          color: $color-white;
+          font-size: 10px;
+          font-family: $font-family-regular;
+          text-decoration: none !important;
         }
 
-        height: 100px;
-        width: 100px;
-        border-radius: 6px;
-        background: $color-black;
-        overflow: hidden;
+        & .breadcrumb-item:not(:last-child) {
+          cursor: pointer;
+        }
+
+        margin-bottom: 80px;
+      }
+
+      &__title {
+        font-size: 46px;
+        font-family: $font-family-bold;
+        color: $color-white;
+        text-align: center;
+        margin-bottom: 25px;
+      }
+
+      &__tags {
+        & .dt-tags__list {
+          & li {
+            display: inline;
+            color: white;
+            font-size: 8px;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            padding: 11px 6px;
+            border: 1px solid #6d767b;
+            border-radius: 6px;
+          }
+        }
+      }
+
+      &__description {
+        font-size: 14px;
+        font-family: $font-family-regular;
+        color: $color-white;
+        margin-bottom: 75px;
+      }
+
+      &__photos {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        margin-bottom: 35px;
 
-        img {
-          height: 100%;
-          width: auto;
+        & .dt-photos__item--placeholder {
+          background: rgba(0, 113, 235, 0.85) !important;
         }
 
-        .dt-item__placeholder {
-          color: white;
+        & .dt-photos__item {
+          &:not(:last-child) {
+            margin-right: 6px;
+          }
+
+          height: 100px;
+          width: 100px;
+          border-radius: 6px;
+          background: $color-black;
+          overflow: hidden;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          img {
+            height: 100%;
+            width: auto;
+          }
+
+          .dt-item__placeholder {
+            color: white;
+          }
+        }
+      }
+
+      &__avatar {
+        & .dt-avatar__img {
+          width: 109px;
+          height: 109px;
+          overflow: hidden;
+          border-radius: 6px;
         }
       }
     }
@@ -115,53 +128,55 @@
 }*/
 
 @media screen and (max-width: 768px) {
-  .dt-header__image {
+  /*.dt-header__image {
     height: 1065px;
-  }
+  }*/
   .dt-page__preheader {
-    padding-top: 115px;
-    padding-bottom: 40px;
+    .dt-preheader__content {
+      padding-top: 115px;
+      padding-bottom: 40px;
 
-    & .dt-preheader {
-      &__title {
-        font-size: 23px;
-        line-height: 31px;
-        letter-spacing: 0;
-        margin-bottom: 20px;
-      }
+      & .dt-preheader {
+        &__title {
+          font-size: 23px;
+          line-height: 31px;
+          letter-spacing: 0;
+          margin-bottom: 20px;
+        }
 
-      &__description {
-        font-size: 12px;
-        line-height: 26px;
-        margin-bottom: 20px;
-      }
+        &__description {
+          font-size: 12px;
+          line-height: 26px;
+          margin-bottom: 20px;
+        }
 
-      &__tags {
-        & .dt-tags__list {
-          line-height: 40px;
-          letter-spacing: 5px;
+        &__tags {
+          & .dt-tags__list {
+            line-height: 40px;
+            letter-spacing: 5px;
+          }
+        }
+
+        &__photos {
+          & .dt-photos__item {
+            width: 90px;
+            height: 90px;
+          }
+        }
+
+        &__view-reviews {
+          flex-wrap: wrap-reverse;
+
+          & .dt-rating__star {
+            margin-bottom: 25px;
+          }
         }
       }
 
-      &__photos {
-        & .dt-photos__item {
-          width: 90px;
-          height: 90px;
-        }
+      & .curved {
+        padding-top: 25px;
+        padding-bottom: 25px;
       }
-
-      &__view-reviews {
-        flex-wrap: wrap-reverse;
-
-        & .dt-rating__star {
-          margin-bottom: 25px;
-        }
-      }
-    }
-
-    & .curved {
-      padding-top: 25px;
-      padding-bottom: 25px;
     }
   }
 
