--- a/scss/components/main-block.scss
+++ b/scss/components/main-block.scss
@@ -643,6 +643,11 @@ svg {
     transform: rotate(0deg);
 }
 
+.accordion__head-splitted::before {
+    width: calc(100% + 3rem);
+    left: -1.5rem;
+}
+
 .accordion__item.visible>.accordion__content {
     display: block;
 }
@@ -671,7 +676,7 @@ svg {
     position: absolute;
     left: 0;
     top: -1px;
-    width: 0.7rem;
+    width: 1%;
     height: 4px;
     background-color: $color-blue;
     border-radius: 6px;
@@ -693,7 +698,7 @@ svg {
     position: absolute;
     left: 0;
     top: -1px;
-    width: 1.5rem;
+    width: 10%;
     height: 4px;
     background-color: $color-blue;
     border-radius: 6px;
@@ -704,7 +709,7 @@ svg {
     position: absolute;
     left: 0;
     top: -1px;
-    width: 7rem;
+    width: 20%;
     height: 4px;
     background-color: $color-blue;
     border-radius: 6px;
@@ -763,7 +768,7 @@ svg {
 }
 
 .info-icon {
-    top: -0.5rem !important;
+    top: -0.5rem;
     right: 0;
 }
 
@@ -946,7 +951,7 @@ input:checked~.discount-block {
     display: flex !important;
 }
 
-input:checked~button{
+input:checked~button {
     display: block !important;
 }
 
@@ -958,23 +963,26 @@ input:disabled+.category {
     border: none;
 }
 
-input:checked+.collapsed-menu {
-    width: 100%;
-    background-color: $color-white;
-    box-shadow: 0 10px 30px 7px rgba($color-blue, 0.1);
-    border-radius: 0.375rem;
+.collapsed-menu {
+    transition: 0.3s;
+    top: -1.5rem;
+    right: -1.5rem;
     padding: 1.5rem !important;
     padding-top: 1rem !important;
+    border-radius: 0.375rem;
+    width: auto;
+    height: auto;
 }
 
-input:checked+.collapsed-menu .collapsed-menu__body {
-    display: block !important;
+.active-objects .collapsed-menu {
+    top: -1.95rem;
 }
 
 .menu-dots {
     transition: 0.3s;
     width: 30px;
     height: 30px;
+    z-index: 6;
 }
 
 .menu-dots:hover>.menu-dot {
@@ -987,8 +995,14 @@ input:checked+.collapsed-menu .collapsed-menu__body {
     transition: 0.3s;
 }
 
-.collapsed-menu {
-    transition: 0.3s;
+input:checked+.collapsed-menu {
+    background-color: $color-white;
+    box-shadow: 0 10px 30px 7px rgba($color-blue, 0.1);
+    z-index: 3;
+}
+
+input:checked+.collapsed-menu .collapsed-menu__body {
+    display: flex !important;
 }
 
 .destination-number {
@@ -1040,8 +1054,8 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 
 .cell {
-    width: 54px;
-    height: 42px;
+    width: 11.9%;
+    height: 3rem;
 }
 
 //--------------------------------------------
