--- a/scss/components/main-block.scss
+++ b/scss/components/main-block.scss
@@ -274,7 +274,7 @@ h3 {
     font-size: 0.7rem;
 }
 
-.letter-spasing-3 {
+.letter-spacing-3 {
     letter-spacing: 3px;
 }
 
@@ -303,9 +303,21 @@ h3 {
     color: $color-white;
 }
 
+.bg-green:hover {
+    background-color: rgba($color-green, 0.9);
+}
+
 .bg-blue {
     background-color: $color-blue;
     color: $color-white;
+}
+
+.bg-blue:hover {
+    background-color: rgba($color-blue, 0.9);
+}
+
+.bg-white:hover {
+    color: $color-blue;
 }
 
 .black {
@@ -316,6 +328,16 @@ h3 {
 .blue {
     color: $color-blue;
     fill: $color-blue;
+}
+
+.blue-hover:hover {
+    fill: $color-blue;
+    color: $color-blue;
+}
+
+.blue-hover:hover * {
+    fill: $color-blue;
+    color: $color-blue;
 }
 
 .red {
@@ -398,6 +420,10 @@ svg {
     background-color: rgba($color-red, 0.07);
 }
 
+.red-underline:hover::after {
+    background-color: rgba($color-red, 1);
+}
+
 .blue-underline::after {
     content: '';
     position: absolute;
@@ -408,6 +434,10 @@ svg {
     background-color: rgba($color-blue, 0.07);
 }
 
+.blue-underline:hover::after {
+    background-color: rgba($color-blue, 1);
+}
+
 .black-underline::after {
     content: '';
     position: absolute;
@@ -416,6 +446,10 @@ svg {
     width: 100%;
     height: 1px;
     background-color: rgba($color-black, 0.07);
+}
+
+.black-underline:hover::after {
+    background-color: rgba($color-black, 1);
 }
 
 .button {
@@ -456,14 +490,28 @@ svg {
     object-fit: cover;
 }
 
-.active,
-.active>* {
+.active {
     background-color: $color-blue !important;
-    color: $color-white;
     box-shadow: 0 10px 30px 7px rgba($color-blue, 0.3);
-    z-index: 1;
+    color: $color-white;
     fill: $color-white;
 }
+
+.active:hover {
+    color: $color-white !important;
+    fill: $color-white !important;
+}
+
+.active * {
+    color: $color-white;
+    fill: $color-white;
+}
+
+.active:hover * {
+    color: $color-white !important;
+    fill: $color-white !important;
+}
+
 
 .inactive {
     background-color: $color-white !important;
@@ -599,6 +647,14 @@ svg {
     }
 }
 
+.current-excursion .dropdown {
+    background-color: transparent !important;
+}
+
+.current-excursion .dropdown-menu {
+    min-width: 130px;
+}
+
 .cover {
     object-fit: cover;
 }
@@ -636,6 +692,10 @@ svg {
     height: 7px;
     background-color: $color-red;
     border-radius: 50%;
+}
+
+.sms:hover svg {
+    fill: $color-blue;
 }
 
 .expand-img svg {
@@ -765,6 +825,7 @@ svg {
 .img {
     transition: 0.3s;
     cursor: pointer;
+    object-fit: cover;
 }
 
 .info-icon {
@@ -851,9 +912,27 @@ svg {
 
 //-----------------------------
 
-//--------simpleselect---------
+//----------DROPDOWN-----------
 
+.dropdown-toggle::after {
+    display: none;
+}
 
+.dropdown-menu {
+    box-shadow: 0 10px 30px 7px rgba($color-blue, 0.1);
+    min-width: 0;
+    z-index: 2;
+}
+
+.dropdown-item * {
+    color: $color-black;
+    fill: $color-blue;
+}
+
+.dropdown-item:hover {
+    color: $color-blue;
+    background-color: transparent;
+}
 
 //-----------------------------
 
@@ -861,6 +940,9 @@ svg {
     width: 25px;
     height: 25px;
     transition: 0.3s;
+    position: absolute;
+    top: 0;
+    right: 2rem;
 
     @media (min-width: 992px) {
         width: 20px;
@@ -887,7 +969,9 @@ svg {
 
 .add-main-photo:hover>.img,
 .add-additional-photo:hover>.img {
-    filter: brightness(50%);
+    @media (min-width: 992px) {
+        filter: brightness(50%);
+    }
 }
 
 .add-main-photo:hover>.delete,
@@ -899,11 +983,17 @@ svg {
     width: 32px;
     height: 32px;
     background-color: $color-red;
-    display: none;
-    top: calc(50% - 16px);
-    left: calc(50% - 16px);
+    top: 0.5rem;
+    right: 0.5rem;
     z-index: 1;
     cursor: pointer;
+    display: flex;
+
+    @media (min-width: 992px) {
+        top: calc(50% - 16px);
+        left: calc(50% - 16px);
+        display: none;
+    }
 }
 
 input[type=checkbox] {
@@ -919,6 +1009,10 @@ input[type=checkbox] {
     width: 30px;
     height: 30px;
     border: 1px solid rgba($color-black, 0.07);
+}
+
+.custom-checkbox:focus {
+    border: 1px solid $color-blue;
 }
 
 .dot {
@@ -982,7 +1076,6 @@ input:disabled+.category {
     transition: 0.3s;
     width: 30px;
     height: 30px;
-    z-index: 6;
 }
 
 .menu-dots:hover>.menu-dot {
